--- a/src/main/webapp/public/htm/adminShowPeople.html
+++ b/src/main/webapp/public/htm/adminShowPeople.html
@@ -2,8 +2,8 @@
 
 <div id="people-table">
 	<div class="search-staff">
-		<input type="text" placeholder="请输入要查询的员工信息">
-		<div class="search-action">
+		<input type="text" placeholder="请输入要查询的员工信息" ng-model="searchCondition">
+		<div class="search-action" ng-click="searchStaffFunc()">
 			<i class="material-icons md-light md-36">search</i>
 		</div>
 	</div>
@@ -16,20 +16,20 @@
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">目前，共有<strong>165</strong>名员工</a>
+					<a href="javascript:void(0)">目前，共有<strong ng-bind="staffList.length"></strong>名员工</a>
 				</div>
 				<div class="collapsible-body">
 					<table class="bordered">
 						<thead>
 							<tr>
-								<td>员工</td>
-								<td>已匹配站点</td>
+								<td>员工名称</td>
+								<td>当前乘车站点</td>
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="people in addpeoples" ng-click="showEmployeeSta(1,2)">
-								<td ng-bind="people.id"></td>
-								<td ng-bind="people.name"></td>
+							<tr ng-repeat="staff in staffList" ng-click="showEmployeeSta(staff)">
+								<td ng-bind="staff.e_name"></td>
+								<td ng-bind="staff.s_name"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -46,20 +46,20 @@
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
-					<a href="javascript:void(0)">共有<strong>165</strong>条搜索结果</a>
+					<a href="javascript:void(0)">共有<strong ng-bind="searchStaffList.length"></strong>条搜索结果</a>
 				</div>
 				<div class="collapsible-body">
 					<table class="bordered">
 						<thead>
 							<tr>
-								<td>员工</td>
-								<td>已匹配站点</td>
+								<td>员工名称</td>
+								<td>当前乘车站点</td>
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="people in addpeoples" ng-click="showEmployeeSta(1,2)">
-								<td ng-bind="people.id"></td>
-								<td ng-bind="people.name"></td>
+							<tr ng-repeat="staff in searchStaffList" ng-click="showEmployeeSta(staff)">
+								<td ng-bind="staff.e_name"></td>
+								<td ng-bind="staff.s_name"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -75,15 +75,14 @@
 		</div>
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">莱奥梅西</span><br>
-				<span class="col row">编号：<strong>14051339</strong></span>
+				<span class="card-title" ng-bind="chosenStaff.e_name"></span><br>
+				<span class="col row">编号：<strong ng-bind="chosenStaff.e_id"></strong></span>
 				<span class="col row">部门：<strong>总务部</strong></span>
-				<span class="col row">住址：<strong>杭州电子科技大学生活区21号楼</strong></span>
-				<span class="col row">站点：<strong>下沙杭电站</strong></span>
-				<span class="col row">距离：<strong>210m</strong></span>
+				<span class="col row">住址：<strong ng-bind="chosenStaff.e_address"></strong></span>
+				<span class="col row">站点：<strong ng-bind="chosenStaff.s_name"></strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">修改站点</a>
+				<a href="javascript:void(0)" class="change-station">修改站点</a>
 				<a href="javascript:void(0)">查看附近站点</a>
 			</div>
 		</div>
@@ -96,15 +95,14 @@
 		</div>
 		<div class="card blue-grey darken-1">
 			<div class="card-content white-text">
-				<span class="card-title">莱奥梅西</span><br>
-				<span class="col row">编号：<strong>14051339</strong></span>
+				<span class="card-title" ng-bind="chosenStaff.e_name"></span><br>
+				<span class="col row">编号：<strong ng-bind="chosenStaff.e_id"></strong></span>
 				<span class="col row">部门：<strong>总务部</strong></span>
-				<span class="col row">住址：<strong>杭州电子科技大学生活区21号楼</strong></span>
-				<span class="col row">站点：<strong>下沙杭电站</strong></span>
-				<span class="col row">距离：<strong>210m</strong></span>
+				<span class="col row">住址：<strong ng-bind="chosenStaff.e_address"></strong></span>
+				<span class="col row">站点：<strong ng-bind="chosenStaff.s_name"></strong></span>
 			</div>
 			<div class="card-action">
-				<a href="javascript:void(0)">修改站点</a>
+				<a href="javascript:void(0)" class="change-station">修改站点</a>
 				<a href="javascript:void(0)">查看附近站点</a>
 			</div>
 		</div>
@@ -162,9 +160,38 @@
 	</div>
 </div>
 
+<div id="change-sta" class="modal" style="width:320px;">
+	<div class="modal-content">
+		<div class="row">
+			<form class="col s12">
+				<div class="row">
+					<select ng-model="chosenStaff.s_id" ng-options="station.s_id as station.s_name for station in stations"></select>
+					<option value="" disabled selected>请选择你要更换的站点</option>
+				</div>
+			</form>
+		</div>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
+      	<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="updateEmployeeSta()">确认</a>
+	</div>
+</div>
+
+<div id="success-change-sta" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>该员工的站点修改成功！</p>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
 <script type="text/javascript">
 	$(function(){
 		$('.collapsible').collapsible();
 		$('.dropdown-button').dropdown();
+		// $('#people-table').find('.change-station').click(function(){
+		// 	$('#change-sta').openModal();
+		// });
 	});
 </script>
