--- a/src/main/webapp/public/htm/adminSidebar.html
+++ b/src/main/webapp/public/htm/adminSidebar.html
@@ -1,33 +1,18 @@
 <li class="bold">
 	<ul class="collapsible collapsible-accordion">
 		<li class="bold">
-			<div class="collapsible-header waves-effect waves-light">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="admin.showStations">
 				<i class="material-icons">golf_course</i>站点信息管理
 			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="admin.showStations"><i class="material-icons center">search</i><a>查询站点信息</a></li>
-				</ul>
-			</div>
 		</li>
 		<li class="bold">
-			<div class="collapsible-header">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="admin.showPeople">
 				<i class="material-icons">face</i>人员站点管理
 			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="admin.showPeople"><i class="material-icons">autorenew</i><a>手动同步信息</a></li>
-				</ul>
-			</div>
 		</li>
 		<li class="bold">
-			<div class="collapsible-header">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="admin.showReport">
 				<i class="material-icons">assignment</i>导出数据报表
-			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="admin.showReport"><i class="material-icons">description</i><a>数据报表详情</a></li>
-				</ul>
 			</div>
 		</li>
 	</ul>
