--- a/src/main/webapp/public/htm/affairsSchedual.html
+++ b/src/main/webapp/public/htm/affairsSchedual.html
@@ -17,125 +17,48 @@
 	<div class="body">
 		<div class="schedual-title">
 			<ul class="collection collection1 center">
-				<li class="collection-item"><strong>2016-07-11</strong><br>星期一</li>
+				<li class="collection-item"><strong ng-bind="showTime[0]"></strong><br>星期一</li>
 			</ul>
 			<ul class="collection collection2 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期二</li>
+				<li class="collection-item"><strong ng-bind="showTime[1]"></strong><br>星期二</li>
 			</ul>
 			<ul class="collection collection3 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期三</li>
+				<li class="collection-item"><strong ng-bind="showTime[2]"></strong><br>星期三</li>
 			</ul>
 			<ul class="collection collection4 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期四</li>
+				<li class="collection-item"><strong ng-bind="showTime[3]"></strong><br>星期四</li>
 			</ul>
 			<ul class="collection collection5 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期五</li>
+				<li class="collection-item"><strong ng-bind="showTime[4]"></strong><br>星期五</li>
 			</ul>
 			<ul class="collection collection6 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期六</li>
+				<li class="collection-item"><strong ng-bind="showTime[5]"></strong><br>星期六</li>
 			</ul>
 			<ul class="collection collection7 center">
-				<li class="collection-item"><strong>7.11</strong><br>星期日</li>
+				<li class="collection-item"><strong ng-bind="showTime[6]"></strong><br>星期日</li>
 			</ul>
 		</div>
 		<div class="schedual-content">
 			<ul class="collection collection1">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in mon" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection2">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in tue" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection3">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in wed" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection4">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in thu" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection5">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in fri" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection6">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in sat" ng-bind="driver.ename"></li>
 			</ul>
 			<ul class="collection collection7">
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅nima全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
-				<li class="collection-item center">帅全</li>
+				<li class="collection-item center" ng-repeat="driver in sun" ng-bind="driver.ename"></li>
 			</ul>
 		</div>
 	</div>
