--- a/src/main/webapp/public/htm/affairsShowBus.html
+++ b/src/main/webapp/public/htm/affairsShowBus.html
@@ -65,7 +65,7 @@
 			          <label class="active" for="update-dated">保险日期：</label>
 			        </div>
 			        <div class="input-field col s12">
-			          <input id="update-license" type="text" class="validate" ng-model="updateBusInof.d_license">
+			          <input id="update-license" type="text" class="validate" ng-model="updateBusInfo.d_license">
 			          <label class="active" for="update-license">车牌号：</label>
 			        </div>
 				</div>
