--- a/src/main/webapp/public/htm/affairsSidebar.html
+++ b/src/main/webapp/public/htm/affairsSidebar.html
@@ -1,45 +1,23 @@
 <li class="bold">
 	<ul class="collapsible collapsible-accordion">
 		<li class="bold">
-			<div class="collapsible-header waves-effect waves-light">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="affairs.showBus">
 				<i class="material-icons">directions_bus</i>车辆信息管理
 			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="affairs.showBus"><i class="material-icons center">search</i><a>车辆信息详情</a></li>
-				</ul>
-			</div>
 		</li>
 		<li class="bold">
-			<div class="collapsible-header">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="affairs.showRoutes">
 				<i class="material-icons">all_inclusive</i>线路信息管理
 			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="affairs.showRoutes"><i class="material-icons center">search</i><a>显示路线信息</a></li>
-					<li><i class="material-icons center">add_circle_outline</i><a>查看乘坐率</a></li>
-					<li><i class="material-icons center">mode_edit</i><a>只能排路线</a></li>
-				</ul>
-			</div>
 		</li>
 		<li class="bold">
-			<div class="collapsible-header">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="affairs.showSchedual">
 				<i class="material-icons">assignment</i>排班信息管理
 			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="affairs.showSchedual"><i class="material-icons center">search</i><a>查询排班信息</a></li>
-				</ul>
-			</div>
 		</li>
 		<li class="bold">
-			<div class="collapsible-header">
+			<div class="collapsible-header waves-effect waves-light" ui-sref="affairs.showReport">
 				<i class="material-icons">assignment</i>导出数据报表
-			</div>
-			<div class="collapsible-body">
-				<ul>
-					<li ui-sref="affairs.showReport"><i class="material-icons center">search</i><a>查询数据报表</a></li>
-				</ul>
 			</div>
 		</li>
 	</ul>
