--- a/src/main/webapp/public/htm/login.html
+++ b/src/main/webapp/public/htm/login.html
@@ -2,14 +2,25 @@
 	<div class="row">
 		<h1 class="col s12">厂车管理系统</h1>
 		<div class="input-field col s12">
-			<input id="last_name" type="text" class="validate">
+			<input id="last_name" type="text" class="validate" ng-model="user">
       		<label for="last_name">请输入工号：</label>
 		</div>
 		<div class="input-field col s12">
-			<input id="password" type="password" class="validate">
+			<input id="password" type="password" class="validate" ng-model="pass">
       		<label for="password">请输入密码：</label>
 		</div>
-		<button class="btn waves-effect waves-light" type="button" name="action">登录</button> 
+		<button class="btn waves-effect waves-light" type="button" name="action" ng-click="login()">登录</button> 
 	</div>
-	{{ init();}}
 </div>
+
+<script type="text/javascript">
+	$('#mainbody').jParticle({
+		'particlesNumber': 160,
+		'color': '#001D29',
+		'particle': {
+			minSize: 2,
+			maxSize: 5,
+			speed: 120
+		}
+	});
+</script>
