更新 前端代码

--- a/src/main/webapp/public/htm/adminShowAllStations.html
+++ b/src/main/webapp/public/htm/adminShowAllStations.html
@@ -8,10 +8,10 @@
 	</div>
 
 	<div id="panel-level01" class="panel">
-		<div class="goback" ng-click="showLevel07()">
+		<!-- <div class="goback" ng-click="showLevel07()">
 			<i class="material-icons center">keyboard_arrow_left</i>
 			<a href="javascript:void(0)">进行站点智能规划</a>
-		</div>
+		</div> -->
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
@@ -293,7 +293,7 @@
 	</div>
 	<div class="modal-footer">
       <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
-      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-delete-station" ng-click="showLevel01()">确认</a>
+      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-delete-station" ng-click="deleteStopSta()">确认</a>
     </div>
 </div>
 
@@ -303,7 +303,7 @@
 	</div>
 	<div class="modal-footer">
       <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
-      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-delete-station" ng-click="showLevel02()">确认</a>
+      <a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat agree-delete-station" ng-click="deleteStopSta()">确认</a>
     </div>
 </div>
 
@@ -313,7 +313,7 @@
 	</div>
 	<div class="modal-footer">
 		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
-     	<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat stop-to-station1" ng-click="showLevel01()">确认</a>
+     	<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat stop-to-station1" ng-click="setStopToStation()">确认</a>
 	</div>
 </div>
 
@@ -323,7 +323,7 @@
 	</div>
 	<div class="modal-footer">
 		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">取消</a>
-     	<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat stop-to-station2" ng-click="showLevel02()">确认</a>
+     	<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat stop-to-station2" ng-click="setStopToStation()">确认</a>
 	</div>
 </div>
 
