--- a/src/main/webapp/public/htm/affairsShowBus.html
+++ b/src/main/webapp/public/htm/affairsShowBus.html
@@ -148,6 +148,33 @@
 	</div>
 </div>
 
+<div id="success-delelte" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>成功删除该车辆信息！</p>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
+<div id="success-update" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>车辆信息修改成功！</p>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
+<div id="success-add" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>成功添加车辆！</p>
+	</div>
+	<div class="modal-footer">
+		<a href="javascript:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
 
 <script type="text/javascript">
 	
