--- a/src/main/webapp/public/htm/affairsShowRoutes.html
+++ b/src/main/webapp/public/htm/affairsShowRoutes.html
@@ -9,6 +9,10 @@
 	</div>
 
 	<div id="panel-level01" class="panel" style="display:block;">
+		<div class="goback" ng-click="showLevel07()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">进行路线的智能规划</a>
+		</div>
 		<ul class="collapsible" data-collapsible="accordion">
 			<li>
 				<div class="collapsible-header">
@@ -26,8 +30,8 @@
 						<tbody>
 							<tr ng-repeat="route in routes" ng-click="showOneRoute($index)" style="cursor:pointer;">
 								<td ng-bind="route.car.id"></td>
-								<td ng-bind="route.number"></td>
-								<td ng-bind="route.rate"></td>
+								<td ng-bind="route.numOfEmp"></td>
+								<td ng-bind="route.rateOfTake*100+'%'"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -58,8 +62,8 @@
 						<tbody>
 							<tr ng-repeat="route in searchRoutes" ng-click="searchShowOneRoute($index)" style="cursor:pointer;">
 								<td ng-bind="route.car.id"></td>
-								<td ng-bind="route.number"></td>
-								<td ng-bind="route.rate"></td>
+								<td ng-bind="route.numOfEmp"></td>
+								<td ng-bind="route.rateOfTake*100+'%'"></td>
 							</tr>
 						</tbody>
 					</table>
@@ -187,9 +191,90 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="add-route" class="tooltipped" data-position="right" data-delay="50" data-tooltip="新增路线">
-		<i class="material-icons center">add_circle_outline</i>
-	</div> -->
+
+	<div id="panel-level07" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel01()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回查看当前全部路线</a>
+		</div>
+		<ul class="collapsible" data-collapsible="accordion">
+			<li>
+				<div class="collapsible-header" ng-click="showIntelligentOnMap(intelligentRoutes[0].routes)">
+					<a href="javascript:void(0)">
+						平均路程最短的路线方案
+					</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="route in intelligentRoutes[0].routes" ng-click="showIntelligentOnMap(route)">路线ID为：<strong ng-bind="route.car.id"></strong></li>
+					</ul>
+				</div>
+			</li>
+			<li>
+				<div class="collapsible-header" ng-click="showIntelligentOnMap(intelligentRoutes[1].routes)">
+					<a href="javascript:void(0)">
+						路程方差最小的路线方案
+					</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="route in intelligentRoutes[0].routes" ng-click="showIntelligentOnMap(route)">路线ID为：<strong ng-bind="route.car.id"></strong></li>
+					</ul>
+				</div>
+			</li>
+			<li>
+				<div class="collapsible-header" ng-click="showIntelligentOnMap(intelligentRoutes[2].routes)">
+					<a href="javascript:void(0)">
+						车辆乘坐率最高的路线方案
+					</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection">
+						<li class="collection-item" ng-repeat="route in intelligentRoutes[0].routes" ng-click="showIntelligentOnMap(route)">路线ID为：<strong ng-bind="route.car.id"></strong></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+	<div id="panel-level08" class="panel" style="display:none;">
+		<div class="goback" ng-click="showLevel07()">
+			<i class="material-icons center">keyboard_arrow_left</i>
+			<a href="javascript:void(0)">返回路线的智能规划</a>
+		</div>
+		<ul class="collapsible" data-collapsible="accordion">
+			<li class="active">
+				<div class="collapsible-header">
+					<a href="javascript:void(0)">该路线的车辆详情</a>
+				</div>
+				<div class="collapsible-body">
+					<div class="card blue-grey darken-1">
+				        <div class="card-content white-text">
+				        	<span style="display:inline-block;width:135px;">车牌号：<strong ng-bind="inteOneRoute.car.d_license">浙A12345</strong></span>
+				        	<br>
+				        	<span style="display:inline-block;width:135px;">车辆品牌：<strong ng-bind="inteOneRoute.car.brand">金龙</strong></span>
+				        	<span style="display:inline-block;width:135px;">座位数：<strong ng-bind="inteOneRoute.car.seat">30</strong></span>
+				        	<span style="display:inline-block;width:100%;">注册日期：<strong ng-bind="inteOneRoute.car.logon">2010-10-25</strong></span>
+				        	<span style="display:inline-block;width:100%;">保险日期：<strong ng-bind="inteOneRoute.car.dated">2018-04-13</strong></span>
+				        </div>
+				    </div>
+				</div>
+			</li>
+			<li>
+				<div class="collapsible-header">
+					<a href="javascript:void(0)">该路线所经过的站点详情</a>
+				</div>
+				<div class="collapsible-body">
+					<ul class="collection" style="cursor:pointer;">
+						<li class="collection-item" ng-repeat="station in inteOneRoute.stations" ng-bind="station.s_name"></li>
+ 					</ul>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+	
+
 </div>
 
 <div id="update-bus" class="modal">
@@ -247,6 +332,7 @@
 
 <div id="add-station1" class="modal" style="width:300px;">
 	<div class="modal-content">
+		<p>新增站点将添加在该站之后</p>
 		<div class="row">
 			<form class="col s12">
 				<div class="row">
@@ -267,6 +353,7 @@
 
 <div id="add-station2" class="modal" style="width:300px;">
 	<div class="modal-content">
+		<p>新增站点将添加在该站之后</p>
 		<div class="row">
 			<form class="col s12">
 				<div class="row">
