更新 前端代码路线管理模块

--- a/src/main/webapp/public/htm/adminShowAllStations.html
+++ b/src/main/webapp/public/htm/adminShowAllStations.html
@@ -393,6 +393,15 @@
 	</div>
 </div>
 
+<div id="is-OK1" class="modal" style="width:280px;">
+	<div class="modal-content">
+		<p>当前人员站点不匹配，建议重新同步</p>
+	</div>
+	<div id="modal-footer">
+		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
 <script type="text/javascript">
 	$(function(){
 		$('.collapsible').collapsible();
