--- a/src/main/webapp/public/htm/adminShowPeople.html
+++ b/src/main/webapp/public/htm/adminShowPeople.html
@@ -186,6 +186,15 @@
 	</div>
 </div>
 
+<div id="match" class="modal" style="width:220px;">
+	<div class="modal-content">
+		<p>员工信息同步成功！</p>
+	</div>
+	<div id="modal-footer">
+		<a href="javascrit:void(0)" class="modal-action modal-close waves-effect waves-green btn-flat">确认</a>
+	</div>
+</div>
+
 <script type="text/javascript">
 	$(function(){
 		$('.collapsible').collapsible();
