更新 预赛最终版前端代码

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" href="css/topbat.css">
 	<link rel="stylesheet" type="text/css" href="css/admin.css">
 	<link rel="stylesheet" href="css/affairs.css">
+	<link rel="stylesheet" href="css/manager.css">
 	<script type="text/javascript" src="framework/materialize/js/materialize.js"></script>
 </head>
 <body>
